--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <p><h1>Leonardo Caldas - 25 anos</h1></p>
-        <p><h3>Especialista em Marketing Automation e CRM</h3></p>
+        <p>Especialista em Marketing Automation e CRM</p>
     </header>
 </body>
 </html>
