--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <header>
         <p><h1>Leonardo Caldas - 25 anos</h1></p>
         <p>Especialista em Marketing Automation e CRM</p>
+        <p>Áries - São Paulo/SP</p>
     </header>
 </body>
 </html>
