Inserção da seção com a tabela

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <li>1 xícara (chá) de açúcar</li>
                             <li>1 xícara (chá) de leite</li>
                         </ul>
-    <br>       
+                <br>       
                 <h2>Modo de Preparo: 40 min</h2>
                     <h3>Massa</h3>
                         <ol>
@@ -44,8 +44,41 @@
                         <ol>
                             <li>Despeje em uma tigela a manteiga, o chocolate em pó, o açúcar e o leite, depois misture</li>
                             <li>Leve a mistura ao fogo e continue misturando até obter uma consistência cremosa, depois
-                                despeje a calda por cima do bolo.</li>        
+                                despeje a calda por cima do bolo.</li>     
                         </ol>        
+        </div>
+    </section>
+    <hr>
+    <br>
+    <section>
+        <div>
+            <table border>
+                <tr>
+                    <th style="text-align: center; background-color: rgb(236, 254, 108);">Produto</th>
+                    <th style="text-align: center; background-color: rgb(236, 254, 108);">Preço Unitário</th>
+                    <th style="text-align: center; background-color: rgb(236, 254, 108);">Quantidade em Estoque</th>
+                </tr>
+                <tr>
+                    <td style="text-align: center;">HD SATA 80 GB</td>
+                    <td style="text-align: center;">R$85,00</td>
+                    <td style="text-align: center;">35</td>
+                </tr>
+                <tr>
+                    <td style="text-align: center;">Pen Drive 2 GB</td>
+                    <td style="text-align: center;">R$15,00</td>
+                    <td style="text-align: center;">150</td>
+                </tr>
+                <tr>
+                    <td style="text-align: center;">Impressora Laser Colorida</td>
+                    <td style="text-align: center;">R$613,99</td>
+                    <td style="text-align: center;">18</td>
+                </tr>
+                <tr>
+                    <td style="text-align: center;">Monitor LCD 17"</td>
+                    <td style="text-align: center;">R$309,00</td>
+                    <td style="text-align: center;">41</td>
+                </tr>
+            </table>
         </div>
     </section>
 </body>
